--- a/vbarkovskij.com/less/sections/general.less
+++ b/vbarkovskij.com/less/sections/general.less
@@ -146,3 +146,9 @@ section {
         }
     }
 }
+
+@media (min-width: 660px) {
+    .col-sm-6-fixed {
+        width: 50%;
+    }
+}
